--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "svelte-injector",
   "version": "1.0.0",
+  "main": "src/SvelteInjector.ts",
+  "module": "src/SvelteInjector.ts",
   "repository": {
     "type": "git",
-    "url": "https://github.com/KoRnFactory/svelte-injector.git"
+    "url": "git+https://github.com/KoRnFactory/svelte-injector.git"
   },
   "author": "Federico Varano",
   "license": "MIT",
@@ -14,6 +16,15 @@
     "svelte": "^3.32.0"
   },
   "devDependencies": {
+    "prettier": "^2.2.1",
+    "prettier-plugin-svelte": "^2.1.1",
+    "typescript": "^4.1.3",
     "webpack": "^5.18.0"
+  },
+  "homepage": "https://github.com/KoRnFactory/svelte-injector#readme",
+  "description": "Tool to integrate svelte components into other frontend frameworks",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc"
   }
 }
