--- a/package.json
+++ b/package.json
@@ -1,13 +1,21 @@
 {
   "name": "svelte-injector",
-  "version": "1.0.1",
-  "main": "lib/index.js",
+  "version": "1.0.2",
+  "main": "lib/main.js",
   "types": "lib/index.d.ts",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/KoRnFactory/svelte-injector.git"
   },
-  "keywords": ["svelte", "injector", "angularjs", "framework", "react", "components", "portal"],
+  "keywords": [
+    "svelte",
+    "injector",
+    "angularjs",
+    "framework",
+    "react",
+    "components",
+    "portal"
+  ],
   "author": "Federico Varano",
   "license": "MIT",
   "bugs": {
@@ -17,24 +25,31 @@
     "svelte": "^3.32.0"
   },
   "devDependencies": {
+    "cross-env": "^7.0.3",
+    "del-cli": "^3.0.1",
     "prettier": "^2.2.1",
     "prettier-plugin-svelte": "^2.1.1",
+    "svelte-loader": "^3.0.0",
+    "ts-loader": "^8.0.14",
     "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
     "typescript": "^4.1.3",
-    "webpack": "^5.18.0"
+    "webpack": "^5.18.0",
+    "webpack-cli": "^4.4.0"
   },
   "homepage": "https://github.com/KoRnFactory/svelte-injector#readme",
   "description": "Tool to integrate svelte components into other frontend frameworks",
   "scripts": {
+    "clean" : "del-cli lib",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc",
+    "build": "npm run clean && cross-env NODE_ENV=production webpack",
+    "dev": "npm run clean && webpack",
     "prepare": "npm run build",
     "format": "prettier --write \"src/**/*.ts\"",
     "lint": "tslint -p tsconfig.json",
-    "preversion" : "npm run lint",
-    "version" : "npm run format && git add -A src",
-    "postversion" : "git push && git push --tags"
+    "preversion": "npm run lint",
+    "version": "npm run format && git add -A src",
+    "postversion": "git push && git push --tags"
   },
   "files": [
     "lib/**/*"
