--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "del-cli": "^3.0.1",
     "exec-sh": "^0.4.0",
     "inquirer": "^8.0.0",
+    "nodemon": "^2.0.16",
     "prettier": "^2.2.1",
     "prettier-plugin-svelte": "^2.1.1",
     "react": "^17.0.2",
@@ -40,19 +41,21 @@
     "ts-loader": "^8.0.14",
     "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
-    "typescript": "^4.1.3",
+    "typescript": "^4.7.3",
     "webpack": "^5.18.0",
     "webpack-cli": "^4.4.0"
   },
   "homepage": "https://github.com/KoRnFactory/svelte-injector#readme",
   "description": "Tool to integrate svelte components into other frontend frameworks",
   "scripts": {
-    "clean": "del-cli \"lib/**/*\" \"!lib/package.json\" \"!lib/*.md\"",
+    "clean-lib": "del-cli \"lib/**/*\" \"!lib/package.json\" \"!lib/*.md\"",
     "test": "echo \"Error: no test specified\" && exit 1",
     "copy": "cpy **/*.svelte ../lib/ --cwd=src --parents",
-    "build": "npm run clean && tsc && npm run copy",
-    "dev": "npm run clean && webpack",
-    "prepare": "npm run build",
+    "build-lib": "tsc && npm run copy",
+    "lib": "npm run clean-lib && npm run build-lib",
+    "lib:w": "npm run clean-lib && nodemon --watch src -e \"*\" --exec \"npm run build-lib\"",
+    "dev": "npm run clean-lib && webpack",
+    "prepare": "npm run lib",
     "format": "prettier --write \"src/**/*.ts\"",
     "lint": "tslint -p tsconfig.json",
     "preversion": "npm run lint",
