--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "prettier-plugin-svelte": "^2.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "simple-git": "^3.7.1",
     "svelte": "^3.32.0",
     "svelte-loader": "^3.0.0",
     "ts-loader": "^8.0.14",
