--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "svelte-injector",
-  "version": "2.0.14",
+  "version": "2.1.0-beta.0",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "repository": {
