--- a/.prettierrc
+++ b/.prettierrc
@@ -1,13 +1,9 @@
 {
-  "semi": true,
-  "useTabs": true,
-  "trailingComma": "all",
-  "overrides": [
-    {
-      "files": "*.*",
-      "options": {
-        "printWidth": 140
-      }
-    }
-  ]
+	"useTabs": true,
+	"singleQuote": true,
+	"trailingComma": "none",
+	"printWidth": 100,
+	"plugins": ["prettier-plugin-svelte"],
+	"pluginSearchDirs": ["."],
+	"overrides": [{ "files": "*.svelte", "options": { "parser": "svelte" } }]
 }
