--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,11 @@
-/node_modules/
-/lib
+.DS_Store
+node_modules
+/build
+/dist
+/.svelte-kit
+/package
+.env
+.env.*
+!.env.example
+vite.config.js.timestamp-*
+vite.config.ts.timestamp-*
